Revision history for Perl extension Plack::Middleware::ServerStatus::Lite

0.11   Tue Feb 5 11:46:55 2013
       - uses 'ps -ax' instead of "-e" in *BSD os
       - supports IPv6 
         (Thanks kuriyama-san) 

0.10   Mon Jan 28 14:04:48 2013
       - don't use response_cb if response is ArrayRef.
         response_cb removes Content-Length header.

0.09   Mon Sep 3 16:21:44 2012
        - added skip_ps_command option for systems does not have /proc

0.08   Fri Aug 24 17:35:24 2012
        - allow counting of bytes sent (Thanks kgoess)
        - changed to use Plack::Util::response_cb

0.07   Fri Jun 1 13:20:17 2012
        - display "Total Accesses" and "Seconds since beginning of most recent request"
          original idea by smly

0.06   Fri Mar 23 13:46:27 2012
        - Support JSON format status

0.05   Thu Feb 9 00:54:11 2012
        - Some OS does not support ps "x" opt. uses "-e" instead of "x" 

0.04    Wed Feb 8 10:04:32 2012
        - added "x" opt for ps command. thanks wolfgang.
          Without -x, the Server-Status will not work if the Server is started 
          with eg. Server::Starter which detaches the processes 
          from a controlling terminal.

0.03    Mon Jan 16 10:09:50 2012
        - Support delayed response. thanks nihen.

0.02    Thu Jan 5 10:03:51 2012
        - Show uptime also in human-readble form. thanks nichtich.

0.01    Thu Jul  1 11:00:13 2010
        - original version